[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/MavrickleIcon.png" type="Texture" id=1]
[ext_resource path="res://modules/Reusables/SuperLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://modules/Component/MusicNamePop.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=2]
resource_local_to_scene = true
font_path = "res://font/ubuntu-font-family-0.83/Ubuntu-R.ttf"

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
resource_name = "SuperLabel"
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=3]
resource_local_to_scene = true
font_path = "res://font/ubuntu-font-family-0.83/Ubuntu-R.ttf"

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
resource_name = "SuperLabel"
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
resource_local_to_scene = true
font_path = "res://font/ubuntu-font-family-0.83/Ubuntu-R.ttf"

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
resource_name = "SuperLabel"
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
resource_local_to_scene = true
font_path = "res://font/ubuntu-font-family-0.83/Ubuntu-R.ttf"

[sub_resource type="DynamicFont" id=8]
resource_local_to_scene = true
resource_name = "SuperLabel"
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[node name="MusicNamePop" type="Popup"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -57.5
margin_right = 499.0
margin_bottom = 57.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -90.5
margin_right = 646.0
margin_bottom = 90.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlbumPicture" type="TextureRect" parent="HBoxContainer"]
margin_right = 181.0
margin_bottom = 181.0
rect_min_size = Vector2( 181, 0 )
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="TextLabels" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 185.0
margin_right = 646.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" parent="HBoxContainer/TextLabels" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 11.0
margin_right = 461.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "Title"
clip_text = true
fontFile = SubResource( 2 )
size = 42.0
outlineSize = 2.0

[node name="Artist" parent="HBoxContainer/TextLabels" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 71.0
margin_right = 461.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 4 )
text = "Artist"
clip_text = true
fontFile = SubResource( 3 )

[node name="License" parent="HBoxContainer/TextLabels" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 111.0
margin_right = 461.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 6 )
text = "CC4.0-BY-SA"
clip_text = true
fontFile = SubResource( 5 )
size = 16.0
outlineSize = 0.5

[node name="Source" parent="HBoxContainer/TextLabels" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 142.0
margin_right = 461.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 8 )
text = "https://example.com"
clip_text = true
fontFile = SubResource( 7 )
size = 16.0
outlineSize = 0.5

[node name="Tween" type="Tween" parent="."]
